    ADDED: Lithuanian translation (thanks Dovydas Sankauskas)
    ADDED: you can turn off sending CDs to the terminal emulator (general tab)
    ADDED: unpacking from RPM packages (much faster than using krarc)

  CHANGED: our write-enabled tar KIO-slave is only build when --with-kiotar is passed
           to ./configure. In this case the KDE-version will may be overwritten!

    FIXED: krarc doesn't notice the change of the rpm file to create new contents.cpio
    FIXED: iso protocol cannot step into files larger than 2 GByte
    FIXED: KDE 3.4, starting from profile misses the active tab which causes inconsistent state
    FIXED: krarc reports 000 permission for bz2 files
    FIXED: bug in checksum module regarding names with spaces
    FIXED: konfigurator minor fixes
    FIXED: viewer, the tabs were identified by its page index, which can change
    FIXED: searcher: space means logical OR "text1 text2" == "*text1* || *text2*"
    FIXED: krarc cannot step into those archives which name contains '#'
    FIXED: viewer doesn't warning to save the window at close, and ignores "Cancel" button
    FIXED: locate dialog doesn't close when exiting krusader
    FIXED: UserAction: Crash when a programm wrote to stderr but only stdout was collected
           (Thanks to Shao Lo)
    FIXED: searcher crash when clicking onto an empty field after the results
    FIXED: disk usage crash on remote vfs because of recursion
    FIXED: [ 1262907 ] crash when closing an sftp tab which is loading

1.70.0-beta1 hellfire
=====================
    ADDED: KrSqueezedTextLabel can now specify the area in the string to be always visible
    ADDED: when searching for text inside file, the first line containing the text is displayed
    ADDED: checksum module now supports the cfv tool (for md5 and sha1)
    ADDED: QuickNavigation: hold ctrl and move the mouse over the url bar to see !